--- a/sbt-on-2.10.2
+++ b/sbt-on-2.10.2
@@ -1,10 +1,9 @@
-{
- "projects":[
+{"projects":[
   {
     name:  "scala",
     system: "scala",
-    uri:    "git://github.com/scala/scala.git#2.10.x",
-    set-version: "2.10.3-SNAPSHOT"
+    uri:    "git://github.com/scala/scala.git#v2.10.2",
+    set-version: "2.10.2"
   }, {
     name:   "scalacheck",
     uri:    "git://github.com/rickynils/scalacheck.git#1.10.1"
@@ -26,7 +25,7 @@
   }, {
     name:   "sbt-republish",
     uri:    "http://github.com/typesafehub/sbt-republish.git#wip/dbuild-test",
-    set-version: "0.13.0-on-2.10.3-SNAPSHOT-for-IDE-SNAPSHOT"
+    set-version: "0.13.0-on-2.10.2-for-IDE-SNAPSHOT"
   }, {
     name:   "zinc",
     uri:    "https://github.com/typesafehub/zinc.git"
