--- a/sbt-on-2.10.2
+++ b/sbt-on-2.10.2
@@ -24,7 +24,7 @@
     }
   }, {
     name:   "sbt-republish",
-    uri:    "http://github.com/typesafehub/sbt-republish.git#wip/dbuild-test",
+    uri:    "http://github.com/typesafehub/sbt-republish.git#master",
     set-version: "0.13.0-on-2.10.2-for-IDE-SNAPSHOT"
   }, {
     name:   "zinc",
