--- a/sbt-on-2.10.2
+++ b/sbt-on-2.10.2
@@ -5,18 +5,22 @@
         name:  "scala-lib",
         system: "ivy",
         uri:    "ivy:org.scala-lang#scala-library;2.10.2"
+        set-version: "2.10.2"
       }, {
         name:  "scala-compiler",
         system: "ivy",
         uri:    "ivy:org.scala-lang#scala-compiler;2.10.2"
+        set-version: "2.10.2"
       }, {
         name:  "scala-actors",
         system: "ivy",
         uri:    "ivy:org.scala-lang#scala-actors;2.10.2"
+        set-version: "2.10.2"
       }, {
         name:  "scala-reflect",
         system: "ivy",
         uri:    "ivy:org.scala-lang#scala-reflect;2.10.2"
+        set-version: "2.10.2"
       }, {
         name:   "scalacheck",
         system: "ivy",
