--- a/sbt-on-2.10.3
+++ b/sbt-on-2.10.3
@@ -50,8 +50,8 @@
         }
       }, {
         name:   "sbt-republish",
-        uri:    "http://github.com/typesafehub/sbt-republish.git#v0.13.0-for-scala-2.10.3-RC2",
-        set-version: "0.13.0-on-"${globals.scala-version}"-for-IDE"
+        uri:    "http://github.com/typesafehub/sbt-republish.git#master",
+        set-version: "0.13.0-on-"${globals.scala-version}"-for-IDE-SNAPSHOT"
       }, {
         name:   "zinc",
         uri:    "https://github.com/typesafehub/zinc.git"
