--- a/sbt-on-2.10.2
+++ b/sbt-on-2.10.2
@@ -68,11 +68,15 @@
       }
     ]
     notifications: {
-      send:{
+      send:[{
         projects: "."
         send.to: "qbranch@typesafe.com"
         when: bad
-      }
+      },{
+        projects: "."
+        kind: console
+        when: always
+      }]
       default.send: {
         from: "jenkins-dbuild <antonio.cunei@typesafe.com>"
         smtp:{
