--- a/sbt-on-2.10.3
+++ b/sbt-on-2.10.3
@@ -51,7 +51,7 @@
       }, {
         name:   "sbt-republish",
         uri:    "http://github.com/typesafehub/sbt-republish.git#master",
-        set-version: "0.13.0-on-"${globals.scala-version}"-for-IDE-SNAPSHOT"
+        set-version: "0.13.0-on-"${globals.scala-version}"-for-IDE"
       }, {
         name:   "zinc",
         uri:    "https://github.com/typesafehub/zinc.git"
