Upgrade to latest dbuild.
* Upgrade to dbuild 0.6.5
* Adapt build files for new dbuild.
* Fix references in each file so that we can build sbt, and
  tags are correct.
* Change sbt-republish versions so all-nightly builds don't
  mention for-IDE, since we don't want them on unstable
  masters.

--- a/sbt-on-2.10.2
+++ b/sbt-on-2.10.2
@@ -1,6 +1,6 @@
 {
   // Variables that may be external.  We have the defaults here.
-  globals: {
+  vars: {
     scala-version: "2.10.2"
     scala-version: ${?SCALA_VERSION}
     publish-repo: "http://private-repo.typesafe.com/typesafe/ide-2.10"
@@ -11,23 +11,23 @@
       {
         name:  "scala-lib",
         system: "ivy",
-        uri:    "ivy:org.scala-lang#scala-library;"${globals.scala-version}
-        set-version: ${globals.scala-version}
+        uri:    "ivy:org.scala-lang#scala-library;"${vars.scala-version}
+        set-version: ${vars.scala-version}
       }, {
         name:  "scala-compiler",
         system: "ivy",
-        uri:    "ivy:org.scala-lang#scala-compiler;"${globals.scala-version}
-        set-version: ${globals.scala-version}
+        uri:    "ivy:org.scala-lang#scala-compiler;"${vars.scala-version}
+        set-version: ${vars.scala-version}
       }, {
         name:  "scala-actors",
         system: "ivy",
-        uri:    "ivy:org.scala-lang#scala-actors;"${globals.scala-version}
-        set-version: ${globals.scala-version}
+        uri:    "ivy:org.scala-lang#scala-actors;"${vars.scala-version}
+        set-version: ${vars.scala-version}
       }, {
         name:  "scala-reflect",
         system: "ivy",
-        uri:    "ivy:org.scala-lang#scala-reflect;"${globals.scala-version}
-        set-version: ${globals.scala-version}
+        uri:    "ivy:org.scala-lang#scala-reflect;"${vars.scala-version}
+        set-version: ${vars.scala-version}
       }, {
         name:   "scalacheck",
         system: "ivy",
@@ -51,7 +51,7 @@
       }, {
         name:   "sbt-republish",
         uri:    "http://github.com/typesafehub/sbt-republish.git#master",
-        set-version: "0.13.0-on-"${globals.scala-version}"-for-IDE-SNAPSHOT"
+        set-version: "0.13.0-on-"${vars.scala-version}"-for-IDE-SNAPSHOT"
       }, {
         name:   "zinc",
         uri:    "https://github.com/typesafehub/zinc.git#v0.3.0"
@@ -62,7 +62,7 @@
   options: {
     deploy: [
       {
-        uri=${?globals.publish-repo},
+        uri=${?vars.publish-repo},
         credentials="/home/jenkinsdbuild/dbuild-josh-credentials.properties",
         projects:["sbt-republish"]
       }
