--- a/sbt-on-2.10.3
+++ b/sbt-on-2.10.3
@@ -38,7 +38,7 @@
         extra: { projects: ["core"] }
       }, {
         name:   "sbt",
-        uri:    "git://github.com/sbt/sbt.git#v0.13.0"
+        uri:    "git://github.com/sbt/sbt.git#v0.13.1"
         extra: {
           projects: ["compiler-interface",
                      "classpath","logging","io","control","classfile",
@@ -46,12 +46,12 @@
                      "compiler-integration","incremental-compiler","compile","launcher-interface"
                     ],
           run-tests: false,
-          sbt-version: "0.12.4"
+          sbt-version: "0.13.0"
         }
       }, {
         name:   "sbt-republish",
         uri:    "http://github.com/typesafehub/sbt-republish.git#master",
-        set-version: "0.13.0-on-"${vars.scala-version}"-for-IDE-SNAPSHOT"
+        set-version: "0.13.1-on-"${vars.scala-version}"-for-IDE"
       }, {
         name:   "zinc",
         uri:    "https://github.com/typesafehub/zinc.git#v0.3.0"
