Fix sbt nightlies for name hashing.

--- a/sbt-on-2.10.2
+++ b/sbt-on-2.10.2
@@ -38,7 +38,7 @@
         extra: { projects: ["core"] }
       }, {
         name:   "sbt",
-        uri:    "git://github.com/sbt/sbt.git#0.13.0"
+        uri:    "git://github.com/sbt/sbt.git#0.13.2-M1"
         extra: {
           projects: ["compiler-interface",
                      "classpath","logging","io","control","classfile",
@@ -46,7 +46,7 @@
                      "compiler-integration","incremental-compiler","compile","launcher-interface"
                     ],
           run-tests: false,
-          sbt-version: "0.13.0"
+          sbt-version: "0.13.1"
         }
       }, {
         name:   "sbt-republish",
