Fix version number for nightly scripts.

--- a/sbt-on-2.10.3
+++ b/sbt-on-2.10.3
@@ -9,7 +9,7 @@
    build: {
     "projects":[
       {
-        name:  "scala-lib",
+        name:  "scala-library",
         system: "ivy",
         uri:    "ivy:org.scala-lang#scala-library;"${vars.scala-version}
         set-version: ${vars.scala-version}
@@ -51,7 +51,7 @@
       }, {
         name:   "sbt-republish",
         uri:    "http://github.com/typesafehub/sbt-republish.git#master",
-        set-version: "0.13.0-on-"${vars.scala-version}"-for-IDE-SNAPSHOT"
+        set-version: "0.13.2-M1-on-"${vars.scala-version}"-for-IDE-SNAPSHOT"
       }, {
         name:   "zinc",
         uri:    "https://github.com/typesafehub/zinc.git#master"
