Revert "Fix sbt nightlies for name hashing."
This reverts commit ac3a1212951bde786050c4067ec7456b7cc77d32.

--- a/sbt-on-2.10.2
+++ b/sbt-on-2.10.2
@@ -38,7 +38,7 @@
         extra: { projects: ["core"] }
       }, {
         name:   "sbt",
-        uri:    "git://github.com/sbt/sbt.git#0.13.2-M1"
+        uri:    "git://github.com/sbt/sbt.git#0.13.0"
         extra: {
           projects: ["compiler-interface",
                      "classpath","logging","io","control","classfile",
