--- a/sbt-on-2.10.3
+++ b/sbt-on-2.10.3
@@ -38,7 +38,7 @@
         extra: { projects: ["core"] }
       }, {
         name:   "sbt",
-        uri:    "git://github.com/sbt/sbt.git#v0.13.2-M1"
+        uri:    "git://github.com/sbt/sbt.git#v0.13.0"
         extra: {
           projects: ["compiler-interface",
                      "classpath","logging","io","control","classfile",
@@ -46,7 +46,7 @@
                      "compiler-integration","incremental-compiler","compile","launcher-interface"
                     ],
           run-tests: false,
-          sbt-version: "0.13.0"
+          sbt-version: "0.12.4"
         }
       }, {
         name:   "sbt-republish",
@@ -54,7 +54,7 @@
         set-version: "0.13.0-on-"${vars.scala-version}"-for-IDE-SNAPSHOT"
       }, {
         name:   "zinc",
-        uri:    "https://github.com/typesafehub/zinc.git#master"
+        uri:    "https://github.com/typesafehub/zinc.git#v0.3.0"
       }
     ],
     options:{cross-version:standard},
